Closed Bug 153679 Opened 24 years ago Closed 23 years ago

ASSERTION: aWidgetView must have a widget

Categories

(Core :: Web Painting, defect, P3)

defect

Tracking

()

RESOLVED FIXED

People

(Reporter: bernd_mozilla, Assigned: roc)

References

()

Details

Attachments

(1 file)

I think the change for bug 124685 has caused the following regression in the layout regression tests. There are now a whole bunch of assertions: ###!!! ASSERTION: aWidgetView must have a widget: 'nsnull != widget', file ./nsViewManager.cpp, line 1511 You can trigger these assertions by going to the URL and printing it. May be you should run those tests....
Blocks: 152015
Priority: -- → P3
The assertion should be removed. It's firing because, during printing, someone is trying to either invalidate or scroll a view. This isn't really wrong because invalidates are really just no-ops and scrolling is sometimes necessary during printing (e.g., to make the current selection show up in a list box). I've double-checked the callers of UpdateWidgetArea and they're not going to pass in a view without a widget except during printing.
*** Bug 170322 has been marked as a duplicate of this bug. ***
Marking OS/Platform==All/All per DUPlicate bug 170322 ...
OS: Windows 98 → All
Hardware: PC → All
Comment on attachment 101862 [details] [diff] [review] obvious fix sr=kin@netscape.com Do we want to add a comment that notes when this situation can happen?
Attachment #101862 - Flags: superreview+
fix checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: