Bug 153679. r=gisburn,sr=kin. Remove bogus assertion; it's OK to have no widget sometimes during scrolling or invalidation.